# mega2

./: .gitignore  DASH TINKTA.py  IMPLEMENTATION_SUMMARY.md  README.md  mega2.py  mega2_backup.py  mega2_no_timesheet.py  odk_dashboard_reporter.py  pyproject.toml  requirements.txt  setup.py  simple_timesheet_app.py  test.py  test900.py  test910.py  test_syntax.py  test_syntax2.py  timesheet_test.py
examples/: config_example.yaml  usage_examples.sh
src/mega2_cli/: __init__.py  cli.py  config.py  odk_client.py  pdf_generator.py
tests/: test_basic.py
