[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mega2-cli"
version = "1.0.0"
description = "ODK Central Data Downloader and PDF Report Generator"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MEGA 2.0 Team", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "reportlab>=3.6.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "PyYAML>=5.4.0",
    "openpyxl>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910"
]

[project.urls]
Homepage = "https://github.com/frnkmapendo/mega2"
Repository = "https://github.com/frnkmapendo/mega2"
Documentation = "https://github.com/frnkmapendo/mega2#readme"
"Bug Tracker" = "https://github.com/frnkmapendo/mega2/issues"

[project.scripts]
mega2-cli = "mega2_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "seaborn.*",
    "matplotlib.*"
]
ignore_missing_imports = true